# evam-me-sutam

./: .gitignore  pyproject.toml
data/250219/: mg.reproduced.txt  mg.txt
scripts/: setup_whisper.sh
src/evam_me_sutam/: __init__.py
