[project]
name = "evam-me-sutam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tadija", email = "radusinovictadija@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
evam-me-sutam = "evam_me_sutam:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
